Fixed #10647 - Tooltip: word wrap

--- a/src/app/components/tooltip/tooltip.css
+++ b/src/app/components/tooltip/tooltip.css
@@ -17,6 +17,7 @@
 
 .p-tooltip .p-tooltip-text {
    white-space: pre-line;
+   word-break: break-word;
 }
 
 .p-tooltip-arrow {
